Added tests to join a game
